--- a/ProSuite on Web.html
+++ b/ProSuite on Web.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html;
@@ -6,16 +6,17 @@
     <meta http-equiv="Content-Type" content="text/html;
       charset=ISO-8859-1">
     <title>ProSuite on Web</title>
-    <link href="../css/style.css" type="text/css" rel="stylesheet">
+    <link href="./css/style.css" type="text/css" rel="stylesheet">
+    <script type="text/javascript" src="./js/jquery-1.8.2.js"></script>
+    <script type="text/javascript" src="./js/knockout-2.2.0.js"></script>
+    <script type="text/javascript" src="./js/json2.js"></script>
+    <script type="text/javascript" src="./js/knockout.simpleGrid.1.3.js"></script>
+    <script type="text/javascript" src="./js/loadGrid.js"></script>
   </head>
   <body>
-    &#8203;
-    <div class="liveExample">
-      <div data-bind="simpleGrid: gridViewModel"> </div>
-      <button data-bind="click: addItem"> Add item </button> <button
-        data-bind="click: sortByName"> Sort by name </button> <button
-        data-bind="click: jumpToFirstPage, enable:
-        gridViewModel.currentPageIndex"> Jump to first page </button> </div>
-    &#8203;
+    <div data-bind="simpleGrid: gridViewModel"> </div>
+    <script type="text/javascript">
+	ko.applyBindings(new PagedGridModel(initialData)); 
+    </script>
   </body>
 </html>
